--- a/svm4hp/tws/IBJts/jts.ini
+++ b/svm4hp/tws/IBJts/jts.ini
@@ -1,2 +1,15 @@
+[Logon]
+Locale=en
+useRemoteSettings=true
+Steps=25
+os_titlebar=false
+colorPalletName=classic
+UseSSL=false
+
+[settings]
+hzmilmuw=1292541184443
+
 [communication]
-peer=gw4.ibllc.com:4000
+Peer=gw4.ibllc.com:4000
+Region=us
+
