--- a/svm4hp/tws/IBJts/jts.ini
+++ b/svm4hp/tws/IBJts/jts.ini
@@ -1,12 +1,13 @@
 [Logon]
 Locale=en
 useRemoteSettings=true
-Steps=20
+Steps=23
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
 
 [settings]
+yekhsmtx=1292865927348
 hzmilmuw=1292650612584
 
 [communication]
