run5min_data.bash

--- a/svm8hp/tws/IBJts/jts.ini
+++ b/svm8hp/tws/IBJts/jts.ini
@@ -1,6 +1,6 @@
 [Logon]
 Locale=en
-Steps=20
+Steps=21
 useRemoteSettings=true
 os_titlebar=false
 colorPalletName=classic
@@ -12,4 +12,5 @@ Region=us
 
 [settings]
 hzmilmuw=1292650612584
+izmiljzw=1292953097617
 
