--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,17 +1,10 @@
 [Logon]
 Locale=en
-Steps=24
-useRemoteSettings=true
-os_titlebar=false
-colorPalletName=classic
+useRemoteSettings=false
+Steps=20
 UseSSL=false
 
 [communication]
 Peer=gw4.ibllc.com:4000
 Region=us
-
-[settings]
-hzmilmuw=1292650612584
-izmiljzw=1292953097617
-yekhjmtu=1294442123836
 
