results_2011_0110_EBAY.txt

--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,7 +1,9 @@
 [Logon]
 Locale=en
+Steps=34
 useRemoteSettings=false
-Steps=20
+os_titlebar=false
+colorPalletName=classic
 UseSSL=false
 
 [communication]
