--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,7 +1,7 @@
 [Logon]
 Locale=en
 Steps=34
-useRemoteSettings=false
+useRemoteSettings=true
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
