svmspy/expdp_stkscores.bash

--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,10 +1,13 @@
 [Logon]
 Locale=en
-Steps=34
 useRemoteSettings=true
+Steps=34
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
+
+[settings]
+yekhsmeu=1295042413148
 
 [communication]
 Peer=gw4.ibllc.com:4000
