svmd/score1_5min.sql

--- a/svm6/tws/IBJts/jts.ini
+++ b/svm6/tws/IBJts/jts.ini
@@ -1,12 +1,13 @@
 [Logon]
 Locale=en
 useRemoteSettings=true
-Steps=21
+Steps=28
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
 
 [settings]
+yekhsmtx=1296245295136
 izmiljzw=1292953097617
 hzmilmuw=1292650612584
 yekhjmtu=1296055653338
