--- a/svm6/tws/IBJts/jts.ini
+++ b/svm6/tws/IBJts/jts.ini
@@ -1,16 +1,13 @@
 [Logon]
 Locale=en
 useRemoteSettings=true
-Steps=28
+Steps=23
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
 
 [settings]
-yekhsmtx=1296245295136
-izmiljzw=1292953097617
-hzmilmuw=1292650612584
-yekhjmtu=1296055653338
+yekhsmeu=1296427025461
 
 [communication]
 Peer=gw4.ibllc.com:4000
