--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,8 +1,13 @@
 [Logon]
 Locale=en
-useRemoteSettings=true
 Steps=19
+useRemoteSettings=true
+os_titlebar=false
+colorPalletName=classic
 UseSSL=false
+
+[settings]
+gzmilouu=1296426950575
 
 [communication]
 Peer=gw4.ibllc.com:4000
