qry_spy_fri_noon.sql

--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,16 +1,17 @@
 [Logon]
 Locale=en
-Steps=24
 useRemoteSettings=true
+Steps=23
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
 
-[settings]
-yekhsmtx=1296850509186
-gzmilouu=1296426950575
-
 [communication]
 Peer=gw4.ibllc.com:4000
 Region=us
+
+[settings]
+gzmilouu=1296426950575
+yekhsmtx=1296850509186
+hzmilmuw=1297436610893
 
