--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,6 +1,6 @@
 [Logon]
 Locale=en
-Steps=22
+Steps=23
 useRemoteSettings=true
 os_titlebar=false
 colorPalletName=classic
@@ -10,6 +10,7 @@ UseSSL=false
 yekhsmtx=1297461149840
 gzmilouu=1297604180723
 hzmilmuw=1297436610893
+yekhsmeu=1297780248150
 
 [communication]
 Peer=gw4.ibllc.com:4000
