--- a/svm62/tws/IBJts/dzmilgwdu/nia.properties
+++ b/svm62/tws/IBJts/dzmilgwdu/nia.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Sat Feb 26 07:03:50 GMT 2011
+#Sun Feb 27 22:23:41 GMT 2011
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
@@ -11,7 +11,7 @@ version=1.8.0
 hsqldb.default_table_type=memory
 hsqldb.cache_file_scale=1
 hsqldb.log_size=200
-modified=no
+modified=yes
 hsqldb.cache_version=1.7.0
 hsqldb.original_version=1.8.0
 hsqldb.compatible_version=1.8.0
