svmd/avg_recent_scores.sql

--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,7 +1,7 @@
 [Logon]
 Locale=en
-useRemoteSettings=false
-Steps=40
+useRemoteSettings=true
+Steps=24
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
