--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,7 +1,7 @@
 [Logon]
 Locale=en
-useRemoteSettings=false
-Steps=24
+useRemoteSettings=true
+Steps=46
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
