--- a/svm62/tws/IBJts/jts.ini
+++ b/svm62/tws/IBJts/jts.ini
@@ -1,7 +1,7 @@
 [Logon]
 Locale=en
 useRemoteSettings=true
-Steps=46
+Steps=30
 os_titlebar=false
 colorPalletName=classic
 UseSSL=false
@@ -9,4 +9,7 @@ UseSSL=false
 [communication]
 Peer=gw4.ibllc.com:4000
 Region=us
+
+[settings]
+yekhsmeu=1299795555835
 
